# traductoregc

./: README.md  pyproject.toml
tests/: test_traductoregc.py
traductoregc/: __main__.py
traductoregc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
